<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.esharp.sdk.widget.SPEditView
            android:id="@+id/ev_leave_type"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spsdk_edit_height"
            android:padding="@dimen/spsdk_dp_5"
            app:spsdk_input_hint="@string/spsdk_business_leave"
            app:spsdk_input_title="@string/spsdk_leave_type"
            app:spsdk_input_warning_sign="show"
            app:spsdk_input_content_enabled="disable"
            />

        <ImageView
            android:id="@+id/iv_leave_type_selector"
            android:layout_width="@dimen/spsdk_edit_height"
            android:layout_height="@dimen/spsdk_edit_height"
            android:layout_alignParentEnd="true"
            android:src="@drawable/spsdk_baseline_arrow_drop_down"
            />
        
    </RelativeLayout>
    
    <com.esharp.sdk.widget.SPEditView
        android:id="@+id/ev_start_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spsdk_edit_height"
        android:padding="@dimen/spsdk_dp_5"
        app:spsdk_input_title="@string/spsdk_start_time"
        app:spsdk_input_hint="@string/spsdk_select_start_time"
        app:spsdk_input_icon="@mipmap/spsdk_ic_calendar"
        app:spsdk_input_show_right_img="show"
        app:spsdk_input_warning_sign="show"
        app:spsdk_input_content_enabled="disable"
        />

    <com.esharp.sdk.widget.SPEditView
        android:id="@+id/ev_end_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spsdk_edit_height"
        android:padding="@dimen/spsdk_dp_5"
        app:spsdk_input_title="@string/spsdk_end_time"
        app:spsdk_input_hint="@string/spsdk_select_end_time"
        app:spsdk_input_icon="@mipmap/spsdk_ic_calendar"
        app:spsdk_input_show_right_img="show"
        app:spsdk_input_warning_sign="show"
        app:spsdk_input_content_enabled="disable"
        />

    <com.esharp.sdk.widget.SPEditView
        android:id="@+id/ev_leave_duration"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spsdk_edit_height"
        android:padding="@dimen/spsdk_dp_5"
        app:spsdk_input_title="@string/spsdk_leave_duration"
        app:spsdk_input_hint="@string/spsdk_enter_duration"
        app:spsdk_input_warning_sign="show"
        />

    <com.esharp.sdk.widget.SPNoteView
        android:id="@+id/nv_leave_reason"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spsdk_dp_100"
        android:padding="@dimen/spsdk_dp_5"
        app:spsdk_note_title="@string/spsdk_leave_season"
        app:spsdk_note_hint="@string/spsdk_enter_leave_season"
        app:spsdk_note_warning_sign="show"
        />

</LinearLayout>