<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.esharp.sdk.widget.SPShowTextView
        android:id="@+id/stv_userName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spsdk_edit_height"
        android:layout_marginTop="@dimen/spsdk_dp_5"
        app:spsdk_show_text_detail="Charlie"
        app:spsdk_show_text_title="@string/spsdk_staff" />

    <com.esharp.sdk.widget.SPShowTextView
        android:id="@+id/stv_department"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spsdk_edit_height"
        android:layout_marginTop="@dimen/spsdk_dp_5"
        app:spsdk_show_text_detail="项目部"
        app:spsdk_show_text_title="@string/spsdk_department" />

    <com.esharp.sdk.widget.SPShowTextView
        android:id="@+id/stv_leaveTypeName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spsdk_edit_height"
        android:layout_marginTop="@dimen/spsdk_dp_5"
        app:spsdk_show_text_detail="事假"
        app:spsdk_show_text_title="@string/spsdk_leave_type" />

    <com.esharp.sdk.widget.SPShowTextView
        android:id="@+id/stv_start_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spsdk_edit_height"
        android:layout_marginTop="@dimen/spsdk_dp_5"
        app:spsdk_show_text_detail="2021-08-25 09:15:00"
        app:spsdk_show_text_title="@string/spsdk_start_time" />

    <com.esharp.sdk.widget.SPShowTextView
        android:id="@+id/stv_end_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spsdk_edit_height"
        android:layout_marginTop="@dimen/spsdk_dp_5"
        app:spsdk_show_text_detail="2021-08-25 09:15:00"
        app:spsdk_show_text_title="@string/spsdk_end_time" />

    <com.esharp.sdk.widget.SPShowTextView
        android:id="@+id/stv_leave_duration"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spsdk_edit_height"
        android:layout_marginTop="@dimen/spsdk_dp_5"
        app:spsdk_show_text_detail="8 小时"
        app:spsdk_show_text_title="@string/spsdk_leave_duration" />

    <com.esharp.sdk.widget.SPShowTextView
        android:id="@+id/stv_leave_reason"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spsdk_edit_height"
        android:layout_marginTop="@dimen/spsdk_dp_5"
        app:spsdk_show_text_detail="出去浪"
        app:spsdk_show_text_title="@string/spsdk_leave_season" />

    <com.esharp.sdk.widget.SPShowTextView
        android:id="@+id/stv_commit_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spsdk_edit_height"
        android:layout_marginTop="@dimen/spsdk_dp_5"
        app:spsdk_show_text_detail="2021-08-25 19:00:15"
        app:spsdk_show_text_title="@string/spsdk_commit_at" />

</LinearLayout>