<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spsdk_dp_5"
    android:orientation="vertical">

<!--    对应讯息里面的警报条目点击-->
    <com.esharp.sdk.widget.SPShowTextView
        android:id="@+id/stv_userName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spsdk_edit_height"
        
        app:spsdk_show_text_detail="Charlie"
        app:spsdk_show_text_title="@string/spsdk_staff" />

    <com.esharp.sdk.widget.SPShowTextView
        android:id="@+id/stv_department"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spsdk_edit_height"
        
        app:spsdk_show_text_detail="项目部"
        app:spsdk_show_text_title="@string/spsdk_department" />

    <com.esharp.sdk.widget.SPShowTextView
        android:id="@+id/stv_amend_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spsdk_edit_height"
        
        app:spsdk_show_text_detail="2021-08-25 09:15:00"
        app:spsdk_show_text_title="@string/spsdk_amend_time" />

    <com.esharp.sdk.widget.SPShowTextView
        android:id="@+id/stv_temperature"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spsdk_edit_height"
        
        app:spsdk_show_text_detail="36.5 ℃"
        app:spsdk_show_text_title="@string/spsdk_temperature" />

    <com.esharp.sdk.widget.SPIconTextView
        android:id="@+id/itv_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spsdk_edit_height"
        app:spsdk_icon="@mipmap/spsdk_location"
        />

    <com.esharp.sdk.widget.SPShowTextView
        android:id="@+id/stv_commit_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spsdk_edit_height"
        
        app:spsdk_show_text_detail="2021-08-25 19:00:15"
        app:spsdk_show_text_title="@string/spsdk_commit_at" />

</LinearLayout>