<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<!--    手机号码登入-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/spsdk_text_main18"
            android:layout_marginStart="@dimen/spsdk_dp_10"
            android:text="@string/spsdk_original_password"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spsdk_dp_40"
            android:layout_margin="@dimen/spsdk_dp_10"
            android:background="@color/spsdk_transparent_10"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/et_original_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:paddingStart="@dimen/spsdk_dp_10"
                android:hint="@string/spsdk_enter_original_password"/>

        </LinearLayout>

        <TextView
            style="@style/spsdk_text_main18"
            android:layout_marginLeft="@dimen/spsdk_dp_10"
            android:text="@string/spsdk_new_password"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spsdk_dp_40"
            android:layout_margin="@dimen/spsdk_dp_10"
            android:background="@color/spsdk_transparent_10"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@null"
                android:paddingLeft="@dimen/spsdk_dp_10"
                android:hint="@string/spsdk_enter_new_password"/>

        </LinearLayout>

        <TextView
            style="@style/spsdk_text_main18"
            android:layout_marginLeft="@dimen/spsdk_dp_10"
            android:text="@string/spsdk_confirm_new_password"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spsdk_dp_40"
            android:layout_margin="@dimen/spsdk_dp_10"
            android:background="@color/spsdk_transparent_10"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@null"
                android:paddingLeft="@dimen/spsdk_dp_10"
                android:hint="@string/spsdk_please_confirm_new_password"/>

        </LinearLayout>

        <TextView
            style="@style/spsdk_text_main12"
            android:layout_marginLeft="@dimen/spsdk_dp_10"
            android:text="@string/spsdk_tip_password"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.continental.sdk.widget.MyTextView
        android:id="@+id/mv_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spsdk_dp_40"
        android:layout_margin="@dimen/spsdk_dp_10"
        android:text="@string/spsdk_confirm"
        android:textSize="@dimen/spsdk_ts_16"
        android:textColor="@color/spsdk_color_white"
        android:gravity="center"
        android:textStyle="bold"
        app:stv_corner="@dimen/spsdk_dp_10"
        app:stv_solid="@color/spsdk_color_blue" />

</LinearLayout>