<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/spsdk_dp_5"
    android:layout_marginTop="@dimen/spsdk_dp_5"
    android:layout_marginEnd="@dimen/spsdk_dp_5"
    android:layout_marginBottom="@dimen/spsdk_dp_5"
    app:cardBackgroundColor="@color/spsdk_background_white"
    app:cardCornerRadius="@dimen/spsdk_dp_10"
    app:cardElevation="@dimen/spsdk_dp_3">

    <RelativeLayout
        style="@style/spsdk_home_item_style">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="@dimen/spsdk_dp_30"
            android:layout_height="@dimen/spsdk_dp_30"
            android:scaleType="centerInside"
            android:src="@mipmap/spsdk_leave_record" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/iv_icon"
            android:layout_alignBottom="@+id/iv_icon"
            android:layout_marginBottom="@dimen/spsdk_dp_5"
            android:textColor="@color/spsdk_main_color"
            android:textSize="@dimen/spsdk_ts_16"
            android:text="@string/spsdk_leave_record" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_see_more"
            android:layout_below="@+id/iv_icon"
            android:orientation="vertical">

            <com.continental.sdk.widget.SPShowTextView
                android:id="@+id/stv_leave_type"
                style="@style/spsdk_space_height"
                app:spsdk_show_text_title="@string/spsdk_leave_type"
                app:spsdk_show_text_detail="@string/spsdk_business_leave"
                />

            <com.continental.sdk.widget.SPShowTextView
                android:id="@+id/stv_start_time"
                style="@style/spsdk_space_height"
                app:spsdk_show_text_title="@string/spsdk_start_time"
                app:spsdk_show_text_detail="2021-08-25 09:15:00"
                />

            <com.continental.sdk.widget.SPShowTextView
                android:id="@+id/stv_end_time"
                style="@style/spsdk_space_height"
                app:spsdk_show_text_title="@string/spsdk_end_time"
                app:spsdk_show_text_detail="2021-08-25 09:15:00"
                />

            <com.continental.sdk.widget.SPShowTextView
                android:id="@+id/stv_commit_time"
                style="@style/spsdk_space_height"
                app:spsdk_show_text_title="@string/spsdk_commit_at"
                app:spsdk_show_text_detail="2021-08-25 19:00:15"
                />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/spsdk_dp_30"
            />

        <TextView
            android:id="@+id/tv_see_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/spsdk_dp_5"
            android:textColor="@color/spsdk_color_blue"
            android:textSize="@dimen/spsdk_ts_16"
            android:text="@string/spsdk_see_more"
            />

    </RelativeLayout>

</androidx.cardview.widget.CardView>